add divs and column reverse to footer

--- a/index.html
+++ b/index.html
@@ -367,28 +367,32 @@
     <footer>
         <div class="footer-container">
             <div class="footer-box left">
-                <h2>KEEPS.LOUDDER</h2>
-                <div class="menu-social-icons">
-                    <a href="https://www.facebook.com/KEEPS.LOUDDER/" target="_blank"><i
-                            class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/keeps.loudder/" target="_blank"><i
-                            class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.tiktok.com/@keeps.loudder" target="_blank"><i
-                            class="fa-brands fa-tiktok"></i></a>
-                </div>
-                <p>WhatsApp:</p>
-                <p>+856 20 54 464 965</p>
-                <p>+856 20 55 482 639</p>
+                <div>
+                    <h2>KEEPS.LOUDDER</h2>
+                    <div class="menu-social-icons">
+                        <a href="https://www.facebook.com/KEEPS.LOUDDER/" target="_blank"><i
+                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/keeps.loudder/" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@keeps.loudder" target="_blank"><i
+                                class="fa-brands fa-tiktok"></i></a>
+                    </div>
+                    <p>WhatsApp:</p>
+                    <p>+856 20 54 464 965</p>
+                    <p>+856 20 55 482 639</p>
 
-                <p class="copyright">&#169; Copyright KEEPS.LOUDDER <span class="year"></span>. All rights reserved.
-                </p>
+                    <p class="copyright">&#169; Copyright KEEPS.LOUDDER <span class="year"></span>. All rights reserved.
+                    </p>
+                </div>
                 <br>
-                <h3>Hours:</h3>
-                <h4>KEEPS.LOUDDER Studio</h4>
-                <p>Monday - Friday: 10:00 - 16:00</p>
-                <br>
-                <h4>Vientiane Center</h4>
-                <p>Monday - Sunday: 10:00 - 21:00</p>
+                <div>
+                    <h3>Hours:</h3>
+                    <h4>KEEPS.LOUDDER Studio</h4>
+                    <p>Monday - Friday: 10:00 - 16:00</p>
+                    <br>
+                    <h4>Vientiane Center</h4>
+                    <p>Monday - Sunday: 10:00 - 21:00</p>
+                </div>
             </div>
             <div class="footer-box">
                 <h2 class="studio">Studio</h2>
