redo video section

--- a/index.html
+++ b/index.html
@@ -262,9 +262,7 @@
     <!-- *                              *-->
     <!-- ********************************-->
     <section id="video-section">
-        <video disableremoteplayback="" x-webkit-airplay="deny" src="placeholder-vid.mp4" class="rm-hidden" autoplay=""
-            loop="" playsinline="" muted="" aria-hidden="true" contenteditable="false" poster=""></video>
-        <div class="gradient-overlay"></div>
+        <button class="play-video-btn">Play Video</button>
     </section>
 
 
