--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The official website of KEEPS.LOUDDER. Handmade Lao handbags.">
+    <meta name="keywords" content="Vientiane, Laos, Lao, KEEPS.LOUDDER, handbags, handmade, fashion, accessories">
     <title>KEEPS.LOUDDER | Official Site</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -156,7 +158,7 @@
     </section>
     <!-- ********************************-->
     <!-- *                              *-->
-    <!-- *         OVERVIEW SECTION        *-->
+    <!-- *      OVERVIEW SECTION        *-->
     <!-- *                              *-->
     <!-- ********************************-->
     <section id="overview-section">
@@ -210,7 +212,7 @@
     </section>
     <!-- ********************************-->
     <!-- *                              *-->
-    <!-- *         SLOGAN SECTION        *-->
+    <!-- *        SLOGAN SECTION        *-->
     <!-- *                              *-->
     <!-- ********************************-->
     <section id="slogan-section">
