change order now to shipping section

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         <h2 class="featured-h2">Featured Item</h2>
                         <p>This will serve as a place to put new products, featured items, promotions, etc. The button
                             below will link to the Facebook page.</p>
-                        <a href="https://www.facebook.com/KEEPS.LOUDDER/" target="_blank">Order Now</a>
+                        <a href="#shipping-section">Order Now</a>
                     </div>
                     <div class="featured-image">
-                                            <img src="images/isolated-bag-2.png" alt="">
+                        <img src="images/isolated-bag-2.png" alt="">
                     </div>
                 </div>
             </div>
