change shipping info wording

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="featured-description">
                         <h2 class="featured-h2">Featured Item</h2>
                         <p>This will serve as a place to put new products, featured items, promotions, etc. The button
-                            below will link to the Facebook page.</p>
+                            below will show the user shipping info.</p>
                         <a href="#shipping-section">Order Now</a>
                     </div>
                     <div class="featured-image">
