change font and fix padding

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <!-- *                              *-->
     <!-- ********************************-->
     <section id="about-section">
-        <h2>FAQ</h2>
+        <h2 class="faq-title">FAQ</h2>
         <div class="about-wrapper">
             <div class="about-container left">
                 <img src="images/about-new-2.png" alt="">
