add footer logo and faq styles

--- a/index.html
+++ b/index.html
@@ -228,11 +228,13 @@
     <!-- ********************************-->
     <section id="slogan-section">
         <img class="slogan-logo" src="images/slogan-logo.png" alt="">
+        <br>
         <div class="slogan-text-container">
             <p>With the slogan "From Tradition to Trend," we aim to showcase the unique fabrics and materials of Laos,
                 blending them with contemporary designs to make Lao products popular internationally. This not only
                 boosts the local economy but also preserves the long-standing cultural heritage of Laos.</p>
         </div>
+        <br>
         <div class="slogan-pic-container">
             <img src="images/slogan-1.png" alt="">
             <img src="images/slogan-2.png" alt="">
@@ -284,14 +286,14 @@
     <!-- *        FAQ SECTION           *-->
     <!-- *                              *-->
     <!-- ********************************-->
-    <section id="about-section">
+    <section id="faq-section">
         <h2 class="faq-title">FAQ</h2>
-        <div class="about-wrapper">
-            <div class="about-container left">
+        <div class="faq-wrapper">
+            <div class="faq-container left">
                 <img src="images/about-new-2.png" alt="">
             </div>
-            <div class="about-container right">
-                <div class="about-text-container">
+            <div class="faq-container right">
+                <div class="faq-text-container">
                     <h4>How do I clean my bag?</h4>
                     <p class="faq-text">
                         Do not put this bag in a washing machine. It will ruin its shape and the faux leather. We
@@ -329,7 +331,7 @@
                 might be charged upon arrival in some countries due to the legislation of your country with a
                 different amount.</p>
             <p class="how-to-order">How To Order:</p>
-            <p class="how-to-order-instructions">You can place an order by sending us a message on the KEEPS LOUDDER
+            <p class="how-to-order-instructions">You can place an order by sending us a message on the <strong>KEEPS.LOUDDER</strong>
                 <a href="https://www.facebook.com/KEEPS.LOUDDER" target="_blank">Facebook page</a> or via Whatsapp.
                 Our team will get back to you quickly!
             </p>
@@ -379,7 +381,7 @@
         <div class="footer-container">
             <div class="footer-box left">
                 <div>
-                    <h2>KEEPS.LOUDDER</h2>
+                    <img class="footer-logo" src="images/footer-logo.png" alt="">
                     <div class="menu-social-icons">
                         <a href="https://www.facebook.com/KEEPS.LOUDDER/" target="_blank"><i
                                 class="fa-brands fa-facebook"></i></a>
