--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <ul>
                 <li>Domestic Orders: Lao Domestic orders, we ship via Lao Post, Mixay Express, Anousith Logistics,
                     HAL Logistics. It takes 3-5 days. </li>
-                <li>International Orders: Order are shipped via DHL and Lao post. The shipping fee will depend on
+                <li>International Orders: Orders are shipped via DHL and Lao post. The shipping fee will depend on
                     the package size and destination countries.
                 </li>
             </ul>
