add cart and remove featured item

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </ul>
             </nav>
             <div class="header-background">
-                <div class="featured-item">
+                <!-- <div class="featured-item">
                     <div class="featured-description">
                         <h2 class="featured-h2">Featured Item</h2>
                         <p>This will serve as a place to put new products, featured items, promotions, etc. The button
@@ -99,7 +99,7 @@
                     <div class="featured-image">
                         <img src="images/isolated-bag-2.png" alt="">
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </section>
@@ -202,19 +202,19 @@
         <div class="merch-card-container">
             <div class="merch-card">
                 <img src="images/merch-1.png" alt="">
-                <!-- <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button> -->
+                <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button>
             </div>
             <div class="merch-card">
                 <img src="images/merch-2.png" alt="">
-                <!-- <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button> -->
+                <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button>
             </div>
             <div class="merch-card">
                 <img src="images/merch-3.png" alt="">
-                <!-- <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button> -->
+                <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button>
             </div>
             <div class="merch-card">
                 <img src="images/merch-4.png" alt="">
-                <!-- <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button> -->
+                <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button>
             </div>
         </div>
     </section>
