--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous"
         src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0"></script>
-
+    <!-- ********************************-->
+    <!-- *                              *-->
+    <!-- *       LOADING SECTION        *-->
+    <!-- *                              *-->
+    <!-- ********************************-->
     <!-- ********************************-->
     <!-- *                              *-->
     <!-- *       HEADER SECTION         *-->
@@ -30,6 +34,9 @@
     <!-- ********************************-->
     <header>
         <section id="header-section">
+                <div class="loading-container">
+        <img src="images/canva-kl.gif" alt="Loading...">
+    </div>
             <div class="logo-bar">
                 <div class="logo-bar-social-icons">
                     <a href="https://www.facebook.com/KEEPS.LOUDDER/" target="_blank"><i
@@ -328,7 +335,8 @@
                 might be charged upon arrival in some countries due to the legislation of your country with a
                 different amount.</p>
             <p class="how-to-order">How To Order:</p>
-            <p class="how-to-order-instructions">You can place an order by sending us a message on the <strong>KEEPS.LOUDDER</strong>
+            <p class="how-to-order-instructions">You can place an order by sending us a message on the
+                <strong>KEEPS.LOUDDER</strong>
                 <a href="https://www.facebook.com/KEEPS.LOUDDER" target="_blank">Facebook page</a> or via Whatsapp.
                 Our team will get back to you quickly!
             </p>
